# oresat-configs

./: README.md  pyproject.toml
.github/workflows/: tests.yaml
docs/: conf.py
docs/scripts/: gen_beacon_rst.py
oresat_configs/: __init__.py  __main__.py  _yaml_to_od.py  beacon_config.py  card_config.py  card_info.py  cards.yaml  constants.py  od_config.py  odtypes.py  std_objs.py
oresat_configs/base/: c3.yaml  cfc.yaml  fw_common.yaml  gps.yaml  reaction_wheel.yaml  reaction_wheel.yaml.orig  star_tracker.yaml  sw_common.yaml
oresat_configs/configs/: cards_config.py  edl_config.py  mission_config.py  od_config.py
oresat_configs/oresat0/: beacon.yaml
oresat_configs/oresat1/: beacon.yaml  cards.csv  star_tracker_overlay.yaml
oresat_configs/scripts/: __init__.py  _canopend_  cards.py.txt  edl_commands.py.txt  gen_cand.py  gen_cand_config.py  gen_cand_manager.py  gen_canopend.py  gen_canopend_config.py  gen_canopend_master.py  gen_canopennode.py  gen_dbc.py  gen_dcf.py  gen_eds.py  gen_fw_files.py  gen_kaitai.py  gen_rst_manager.py  gen_xtce.py  list_cards.py  main.py  pdo.py  print_od.py  sdo_transfer.py
tests/: CO_driver_target.h  __init__.py  conftest.py  gen-all-fw.sh  test_config_types.py  test_configs.py  test_od_generation.py  test_oresat0_5.py  test_scripts.py
