[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-configs"
description = "OreSat config library and scripts"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "canopen",
    "dacite",
    "pyyaml",
    "tabulate",
    "requests"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
oresat-configs = "oresat_configs.__main__:main"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools_scm]
write_to = "oresat_configs/_version.py"

[tool.ruff]
line-length = 100
