[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-configs"
description = "OreSat mission configurations"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "bitstring",
    "canopen >= 2.4.1",
    "dacite",
    "pyyaml",
    "tabulate",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "mypy >= 1.18.2",
    "ruff",
    "setuptools",
    "setuptools-scm",
    "sphinx",
    "sphinx-rtd-theme",
    "yamllint",
]

[project.scripts]
oresat-configs = "oresat_configs.scripts.main:oresat_configs"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.csv"]

[tool.setuptools_scm]
write_to = "oresat_configs/_version.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "COM812",  # prohibited-trailing-comma - Conflicts with formatter
    "Q",  # flake8-quotes - Conflicts with formatter
    "S101",  # assert - Should be eventually fixed but for now helps with type checking
    "ANN401",  # any-type - Should be eventually fixed but for now helps with type checking
    "S506",  # unsafe-yaml-load - We're only using trusted YAML and we want the speed
    "D",  # pydocstyle - Should be turned back on but documentation is a large task
    "PT",  # flake8-pytest-style - Turn back on when we migrate to pytest
    "EM",  # flake8-errmsg - on the fence with this, maybe enable when we rethink exceptions
    "TRY003",  # raise-vanilla-args - same as EM, maybe one day?
    "T20",  # flake8-print - Probably a good idea but not right now. Also how would scripts manage?
    "ERA001",  # commented-out-code - ostensibly a good idea but too many false positives
    "PTH",  # flake8-use-pathllib - Should be re-enabled soon but not in this first pass
    "PLR0912",  # too-many-branches - Maybe one day, will require extensive refactoring
    "PLR0915",  # too-many-statements - Maybe one day, will require extensive refactoring
    "PLR2004",  # magic-value-comparison - Maybe one day, CANopen really likes raw hex
    "C901",  # complex-structure - Maybe one day, will require extensive refactoring
    "TID252",  # relative-imports - I'm not convinced by the explanation for this one
    "FIX",  # flake8-fixme - I understand the arguments for and I think they're wrong
    "TD001",  # invalid-todo-tag - FIXMEs and XXX have different meanings than TODO
    "TD002",  # missing-todo-author - Git blame does this better
    "TD003",  # missing-todo-link - If it's important enough to get an issue it shouldn't be a todo
    "PLW2901",  # redefined-loop-name - Too many false positives, it's a useful technique
    "TC006",  # runtime-cast-value - Consistency is too weak an argument, prefer the actual types
    "INP001",  # implicit-namespace-package - warns on docs/ which shouldn't be a package
]

[tool.ruff.format]
quote-style = "preserve"
